--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"skipLibCheck": true,
 		"allowJs": true,
 		"lib": ["DOM"],
-		"removeComments": true
+		"removeComments": true,
+		"downlevelIteration": true
 	},
 
 	"include": ["src"]
